# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml
brain_game/: engine.py  logic.py
brain_game/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_game/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_even.py  brain_games.py
